--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,11 @@
-<header class="flex justify-between items-center py-3 w-[1120px]">
+<header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
   <img
     class="rounded-full h-12 w-12"
     src="../../assets/avatar.jpeg"
     alt="Martin Guette"
   />
 
-  <nav class="flex flex-row gap-x-10">
+  <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="/projects">Projects</a>
