--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import '@fontsource-variable/onest';
 
 interface Props {
   title: string;
@@ -28,11 +29,12 @@ const { title } = Astro.props;
     color-scheme: light dark;
   }
   html {
-    font-family: system-ui, sans-serif;
+    font-family: 'Onest Variable', system-ui, sans-serif;
   }
   body {
-    background: #000;
+    background: #050505;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
   }
 </style>
