--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,11 @@ import Card from '../components/Card.astro';
 <Layout title="Welcome to Astro.">
   <main>
     <section class="w-full mx-auto lg:w-[740px] py-44">
+      <img
+        class="rounded-full h-12 w-12 mb-4"
+        src="../../assets/avatar.jpeg"
+        alt="Martin Guette"
+      />
       <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
         Hey, soy Martin Guette <div class="flex justify-center items-center">
           <a
