--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,15 @@
 import Layout from '../layouts/Layout.astro';
 import Badge from '../components/Badge.astro';
 import Card from '../components/Card.astro';
+import LinkedInIcon from '../components/icons/LinkedIn.astro';
+import GitHubIcon from '../components/icons/GitHub.astro';
+import SocialPill from '../components/icons/SocialPill.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout
+  title="Portafolio de Martin Guette - Desarrollador y Programador Web con 1 año de experiencia"
+  description="Contrata a Martin Guette, un desarrollador web con 1 año de experiencia en Santa Marta, Colombia. Especializado en crear aplicaciones únicas."
+>
   <main>
     <section class="w-full mx-auto lg:w-[740px] py-44">
       <img
@@ -18,15 +24,31 @@ import Card from '../components/Card.astro';
             class="flex justify-center items-center"
             href="https://www.linkedin.com/in/martin-guette/"
             target="_blank"
-            rel="noopener"
+            rel="noopener noreferrer"
           >
             <Badge>Disponible para trabajar</Badge>
           </a>
         </div>
       </h1>
-      <h2 class="text-xl opacity-80">
-        +1 año de experiencia. Desarrollador Web.
+      <h2 class="text-2xl text-wrap">
+        <span>+1 año de experiencia.</span>
+        <span class="text-yellow-200/90"> Desarrollador Web. </span>
+        <span class="text-red-200/90"> De Santa Marta, Colombia.</span>
+        <span class="opacity-75"
+          >Especializado en crear aplicaciones únicas.</span
+        >
       </h2>
+
+      <nav class="flex gap-x-4 mt-8">
+        <SocialPill href="https://www.linkedin.com/in/martin-guette/">
+          <LinkedInIcon class="w-6 h-6" />
+          LinkedIn
+        </SocialPill>
+        <SocialPill href="https://github.com/martinchuck">
+          <GitHubIcon class="w-6 h-6" />
+          Github
+        </SocialPill>
+      </nav>
     </section>
   </main>
 </Layout>
