--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,12 @@ import Badge from '../components/Badge.astro';
 import Card from '../components/Card.astro';
 import LinkedInIcon from '../components/icons/LinkedIn.astro';
 import GitHubIcon from '../components/icons/GitHub.astro';
+import BriefcaseIcon from '../components/icons/Briefcase.astro';
+import EmailIcon from '../components/icons/Email.astro';
 import SocialPill from '../components/icons/SocialPill.astro';
+import SectionContainer from '../components/SectionContainer.astro';
+import Experience from '../components/Experience.astro';
+import Briefcase from '../components/icons/Briefcase.astro';
 ---
 
 <Layout
@@ -12,9 +17,9 @@ import SocialPill from '../components/icons/SocialPill.astro';
   description="Contrata a Martin Guette, un desarrollador web con 1 año de experiencia en Santa Marta, Colombia. Especializado en crear aplicaciones únicas."
 >
   <main>
-    <section class="w-full mx-auto lg:w-[740px] py-44">
+    <SectionContainer class="py-44 pb-24">
       <img
-        class="rounded-full h-12 w-12 mb-4"
+        class="rounded-full size-12 mb-4"
         src="../../assets/avatar.jpeg"
         alt="Martin Guette"
       />
@@ -41,14 +46,26 @@ import SocialPill from '../components/icons/SocialPill.astro';
 
       <nav class="flex gap-x-4 mt-8">
         <SocialPill href="https://www.linkedin.com/in/martin-guette/">
-          <LinkedInIcon class="w-6 h-6" />
+          <LinkedInIcon class="size-6" />
           LinkedIn
         </SocialPill>
         <SocialPill href="https://github.com/martinchuck">
-          <GitHubIcon class="w-6 h-6" />
+          <GitHubIcon class="size-6" />
           Github
         </SocialPill>
+        <SocialPill href="#">
+          <EmailIcon class="size-6" />
+          marguepardo@gmail.com
+        </SocialPill>
       </nav>
-    </section>
+    </SectionContainer>
+
+    <SectionContainer>
+      <h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
+        <BriefcaseIcon class="size-7" />
+        Experiencia Laboral
+      </h2>
+      <Experience />
+    </SectionContainer>
   </main>
 </Layout>
