Update header navigation links to Spanish in Header.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ import Briefcase from '../components/icons/Briefcase.astro';
       </nav>
     </SectionContainer>
 
-    <SectionContainer>
+    <SectionContainer id="experiencia">
       <h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
         <BriefcaseIcon class="size-7" />
         Experiencia Laboral
