Update experience section with new job details and descriptions and semi responsive

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,28 +2,22 @@
 import ExperienceItem from './ExperienceItem.astro';
 const EXPERIENCE = [
   {
-    date: 'February 2022',
-    title: 'Application UI code in Tailwind CSS',
+    date: 'Julio 2023 - Enero 2024',
+    title: 'Desarrollador Front-End - InfoBank',
     description:
-      'Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.',
+      'Desarrollé y mejoré módulos de personalización de menús para un sistema de estadísticas y monitoreo de datos universitarios, implementando menús dinámicos y pruebas unitarias para mejorar la flexibilidad y eficiencia del sistema. Utilizando tecnologías como ReactJS, NextJS, TypeScript, Tailwind CSS, GIT & GitLab, Mock Service Worker.',
     link: '#',
   },
   {
-    date: 'March 2022',
-    title: 'Marketing UI design in Figma',
+    date: 'Enero 2023 - Julio 2023',
+    title: 'Desarrollador Front-End - CETEP Unimagdalena',
     description:
-      'All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.',
-  },
-  {
-    date: 'April 2022',
-    title: 'E-Commerce UI code in Tailwind CSS',
-    description:
-      'Get started with dozens of web components and interactive elements built on top of Tailwind CSS.',
+      'Prácticas en ingeniería de sistemas con enfoque en desarrollo front-end y diseño web, participando en la creación de páginas en WordPress, apoyo en el desarrollo de una aplicación empresarial, y asistencia en paneles de Power BI, utilizando tecnologías como ReactJS, NextJS, TypeScript, y Django.',
   },
 ];
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700">
+<ol class="relative border-s border-gray-200 dark:border-gray-700 ml-3">
   {
     EXPERIENCE.map((experience) => (
       <li class="mb-10 ms-4">
