--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,14 +16,16 @@ import Briefcase from '../components/icons/Briefcase.astro';
   title="Portafolio de Martin Guette - Desarrollador y Programador Web con 1 año de experiencia"
   description="Contrata a Martin Guette, un desarrollador web con 1 año de experiencia en Santa Marta, Colombia. Especializado en crear aplicaciones únicas."
 >
-  <main>
+  <main class="px-4">
     <SectionContainer class="py-44 pb-24">
       <img
         class="rounded-full size-12 mb-4"
         src="../../assets/avatar.jpeg"
         alt="Martin Guette"
       />
-      <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
+      <h1
+        class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
+      >
         Hey, soy Martin Guette <div class="flex justify-center items-center">
           <a
             class="flex justify-center items-center"
@@ -35,7 +37,7 @@ import Briefcase from '../components/icons/Briefcase.astro';
           </a>
         </div>
       </h1>
-      <h2 class="text-2xl text-wrap">
+      <h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
         <span>+1 año de experiencia.</span>
         <span class="text-yellow-200/90"> Desarrollador Web. </span>
         <span class="text-red-200/90"> De Santa Marta, Colombia.</span>
@@ -44,17 +46,17 @@ import Briefcase from '../components/icons/Briefcase.astro';
         >
       </h2>
 
-      <nav class="flex gap-x-4 mt-8">
+      <nav class="flex gap-4 mt-8 flex-wrap">
         <SocialPill href="https://www.linkedin.com/in/martin-guette/">
-          <LinkedInIcon class="size-6" />
+          <LinkedInIcon class="size-4 md:size-6" />
           LinkedIn
         </SocialPill>
         <SocialPill href="https://github.com/martinchuck">
-          <GitHubIcon class="size-6" />
+          <GitHubIcon class="size-4 md:size-6" />
           Github
         </SocialPill>
-        <SocialPill href="#">
-          <EmailIcon class="size-6" />
+        <SocialPill href="mailto:marguepardo@gmail.com">
+          <EmailIcon class="size-4 md:size-6" />
           marguepardo@gmail.com
         </SocialPill>
       </nav>
