--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,12 @@ import LinkedInIcon from '../components/icons/LinkedIn.astro';
 import GitHubIcon from '../components/icons/GitHub.astro';
 import BriefcaseIcon from '../components/icons/Briefcase.astro';
 import EmailIcon from '../components/icons/Email.astro';
+import CodeIcon from '../components/icons/Code.astro';
 import SocialPill from '../components/icons/SocialPill.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 import Experience from '../components/Experience.astro';
 import Briefcase from '../components/icons/Briefcase.astro';
+import Projects from '../components/Projects.astro';
 ---
 
 <Layout
@@ -17,7 +19,7 @@ import Briefcase from '../components/icons/Briefcase.astro';
   description="Contrata a Martin Guette, un desarrollador web con 1 año de experiencia en Santa Marta, Colombia. Especializado en crear aplicaciones únicas."
 >
   <main class="px-4">
-    <SectionContainer class="py-44 pb-24">
+    <SectionContainer class="py-44 pb-32">
       <img
         class="rounded-full size-12 mb-4"
         src="../../assets/avatar.jpeg"
@@ -63,11 +65,19 @@ import Briefcase from '../components/icons/Briefcase.astro';
     </SectionContainer>
 
     <SectionContainer id="experiencia">
-      <h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
+      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
         <BriefcaseIcon class="size-7" />
         Experiencia Laboral
       </h2>
       <Experience />
+    </SectionContainer>
+
+    <SectionContainer id="experiencia">
+      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+        <CodeIcon class="size-7" />
+        Proyectos
+      </h2>
+      <Projects />
     </SectionContainer>
   </main>
 </Layout>
