--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,26 @@
-<footer class="py-20">aqui va el footer</footer>
+<footer
+  class="rounded-lg shadow m-4 bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10"
+>
+  <div
+    class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+  >
+    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+      >© 2024 <a
+        href="https://github.com/martinchuck"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="hover:underline">Martin Guette</a
+      >. Todos los derechos reservados.
+    </span>
+    <ul
+      class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
+    >
+      <li>
+        <a href="#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
+      </li>
+      <li>
+        <a href="#" class="hover:underline">Contacto</a>
+      </li>
+    </ul>
+  </div>
+</footer>
