--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
   <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="#top">Inicio</a>
     <a href="#experiencia">Experiencia</a>
-    <a href='#proyectos"'>Proyectos</a>
+    <a href="#proyectos">Proyectos</a>
     <a href="#sobre-mi">Sobre mí</a>
     <a href="#contacto">Contacto</a>
   </nav>
