--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Projects from '../components/Projects.astro';
     <SectionContainer class="py-44 pb-32">
       <img
         class="rounded-full size-12 mb-4"
-        src="../../assets/avatar.jpeg"
+        src="../../assets/avatar.webp"
         alt="Martin Guette"
       />
       <h1
@@ -39,11 +39,11 @@ import Projects from '../components/Projects.astro';
           </a>
         </div>
       </h1>
-      <h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
+      <h2 class="text-xl lg:text-2xl text-balance max-w-[700px]">
         <span>+1 año de experiencia.</span>
         <span class="text-yellow-200/90"> Desarrollador Web. </span>
         <span class="text-red-200/90"> De Santa Marta, Colombia.</span>
-        <span class="opacity-75"
+        <span class="text-sky-200"
           >Especializado en crear aplicaciones únicas.</span
         >
       </h2>
