--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Projects from '../components/Projects.astro';
       <img
         class="rounded-full size-12 mb-4"
         src="../../assets/avatar.webp"
-        alt="Martin Guette"
+        alt="Martin Guette photo"
       />
       <h1
         class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
