--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -9,7 +9,7 @@ const { title, date, description, link } = Astro.props;
 ---
 
 <div
-  class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+  class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700"
 >
 </div>
 <time
