--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -13,13 +13,13 @@ const { title, date, description, link } = Astro.props;
 >
 </div>
 <time
-  class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+  class="mb-1 text-sm font-normal leading-none text-sky-800 dark:text-sky-200/80"
   >{date}</time
 >
-<h3 class="text-lg font-semibold text-yellow-200 mt-2">
+<h3 class="text-lg font-semibold text-yellow-800 dark:text-yellow-200 mt-2">
   {title}
 </h3>
-<p class="mb-4 text-base font-normal text-gray-200 text-pretty">
+<p class="mb-4 text-base font-normal dark:text-gray-200 text-pretty">
   {description}
 </p>
 {
@@ -28,7 +28,8 @@ const { title, date, description, link } = Astro.props;
       href={link}
       class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
       class="bg-white/5 
-    border border-white/10 rounded-full
+     border dark:border-white/10 border-gray-300
+    rounded-full
     inline-flex justify-center items-center gap-x-2
     py-1 px-2 md:py-2 md:px-4
     text-xs md:text-base
