--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -37,7 +37,9 @@ const PROJECTS = [
 {
   PROJECTS.map(({ title, description, link, github, image, tags }) => (
     <article>
-      <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
+      <h3 class="text-2xl font-semibold text-yellow-800 dark:text-yellow-200 mb-2">
+        {title}
+      </h3>
       <p class="text-lg mb-4 text-pretty">{description}</p>
       <ul class="flex gap-x-2 flex-row mb-2">
         {tags.map((tag) => (
