--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -35,7 +35,7 @@ const PROJECTS = [
 ---
 
 {
-  PROJECTS.map(({ title, description, link, github, image, tags }) => (
+  PROJECTS.map(({ title, description, image, tags }) => (
     <article>
       <h3 class="text-2xl font-semibold text-yellow-800 dark:text-yellow-200 mb-2">
         {title}
@@ -45,7 +45,7 @@ const PROJECTS = [
         {tags.map((tag) => (
           <li>
             <span
-              class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2`}
+              class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 border border-white/10`}
             >
               <tag.icon class="size-4" />
               {tag.name}
