--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,9 @@ import Projects from '../components/Projects.astro';
           </a>
         </div>
       </h1>
-      <h2 class="text-xl lg:text-2xl text-balance max-w-[700px]">
+      <h2
+        class="text-xl lg:text-2xl text-balance max-w-[700px] text-black dark:text-white"
+      >
         <span>+1 año de experiencia.</span>
         <span class="text-yellow-800 dark:text-yellow-200">
           Desarrollador Web.
@@ -71,7 +73,9 @@ import Projects from '../components/Projects.astro';
     </SectionContainer>
 
     <SectionContainer id="experiencia">
-      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+      <h2
+        class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-black/80 dark:text-white/80"
+      >
         <BriefcaseIcon class="size-7" />
         Experiencia Laboral
       </h2>
@@ -79,7 +83,9 @@ import Projects from '../components/Projects.astro';
     </SectionContainer>
 
     <SectionContainer id="proyectos">
-      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+      <h2
+        class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-black/80 dark:text-white/80"
+      >
         <CodeIcon class="size-7" />
         Proyectos
       </h2>
