--- a/src/pages/components.astro
+++ b/src/pages/components.astro
@@ -13,8 +13,7 @@ import Layout from '@/layouts/Layout.astro';
   <SectionContainer class="py-44 pb-32 flex flex-col gap-y-10">
     <article class="mb-10">
       <h1 class="mb-4 text-xl font-semibold">&lt;Badge /&gt;</h1>
-      <Badge>Tailwind</Badge>
-      <Badge>Tailwind</Badge>
+      <Badge>Disponible para trabajar</Badge>
     </article>
 
     <article class="mb-10">
