--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,18 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Badge from '../components/Badge.astro';
-import Card from '../components/Card.astro';
-import LinkedInIcon from '../components/icons/LinkedIn.astro';
-import GitHubIcon from '../components/icons/GitHub.astro';
-import BriefcaseIcon from '../components/icons/Briefcase.astro';
-import EmailIcon from '../components/icons/Email.astro';
-import CodeIcon from '../components/icons/Code.astro';
-import SocialPill from '../components/icons/SocialPill.astro';
-import SectionContainer from '../components/SectionContainer.astro';
-import Experience from '../components/Experience.astro';
-import Briefcase from '../components/icons/Briefcase.astro';
-import Projects from '../components/Projects.astro';
+import Layout from '@/layouts/Layout.astro';
+import Badge from '@/components/Badge.astro';
+import Card from '@/components/Card.astro';
+import LinkedInIcon from '@/components/icons/LinkedIn.astro';
+import GitHubIcon from '@/components/icons/GitHub.astro';
+import BriefcaseIcon from '@/components/icons/Briefcase.astro';
+import EmailIcon from '@/components/icons/Email.astro';
+import CodeIcon from '@/components/icons/Code.astro';
+import SocialPill from '@/components/icons/SocialPill.astro';
+import SectionContainer from '@/components/SectionContainer.astro';
+import Experience from '@/components/Experience.astro';
+import Projects from '@/components/Projects.astro';
+import ProfileIcon from '@/components/icons/Profile.astro';
+import AboutMe from '@/components/AboutMe.astro';
 ---
 
 <Layout
@@ -22,7 +23,7 @@ import Projects from '../components/Projects.astro';
     <SectionContainer class="py-44 pb-32">
       <img
         class="rounded-full size-12 mb-4"
-        src="../../assets/avatar.webp"
+        src="../../public/avatar.webp"
         alt="Martin Guette photo"
       />
       <h1
@@ -90,6 +91,16 @@ import Projects from '../components/Projects.astro';
         Proyectos
       </h2>
       <Projects />
+    </SectionContainer>
+
+    <SectionContainer id="sobre-mi">
+      <h2
+        class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-black/80 dark:text-white/80"
+      >
+        <ProfileIcon class="size-7" />
+        Sobre mí
+      </h2>
+      <AboutMe />
     </SectionContainer>
   </main>
 </Layout>
