styling about me

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,24 +1,35 @@
-<section class="flex gap-x-4">
-  <div class="[&>p]:mb-4">
+<section class="flex gap-x-8 justify-center items-center">
+  <div
+    class="[&>p]:mb-4 [&>p>strong]:text-yellow-300 [&>p>strong]:font-semibold text-pretty"
+  >
     <p>
       ¡Soy Martin! Mi pasión por crear cosas nació en la secundaria, cuando
-      descubrí el desarrollo de software y me di cuenta de lo mucho que
-      disfrutaba dar vida a las ideas a través del código. Esto me llevó a
-      estudiar Ingeniería de Sistemas, donde descubrí el diseño y el desarrollo
-      web como mi camino ideal.
+      descubrí el <strong>desarrollo de software</strong> y me di cuenta de lo mucho
+      que disfrutaba dar vida a las ideas a través del código. Esto me llevó a estudiar
+      <strong>Ingeniería de Sistemas</strong>, donde descubrí el <strong
+        >diseño</strong
+      > y el
+      <strong>desarrollo web</strong> como mi camino ideal.
     </p>
 
     <p>
-      Mi enfoque está en el desarrollo visual, trabajando con atención al
-      detalle y una actitud diligente. A través de proyectos he desarrollado
-      habilidades en entornos colaborativos, aunque también soy muy productivo
-      trabajando de forma independiente.
+      Mi enfoque está en el desarrollo visual, trabajando con <strong
+        >atención al detalle</strong
+      > y una actitud <strong>diligente</strong>. A través de proyectos he
+      desarrollado habilidades en <strong>entornos colaborativos</strong>,
+      aunque también soy muy productivo trabajando de forma independiente.
     </p>
 
     <p>
-      Mi experiencia incluye el desarrollo de aplicaciones web, donde destaco en
-      el front-end. Gracias a mi conocimiento en backend, tengo la capacidad de
-      ofrecer soluciones completas que combinan estética y funcionalidad.
+      Mi experiencia incluye el desarrollo de <strong>aplicaciones web</strong>,
+      donde destaco en el <strong>front-end</strong>. Gracias a mi conocimiento
+      en backend, tengo la capacidad de ofrecer soluciones completas que
+      combinan estética y funcionalidad.
     </p>
   </div>
+  <img
+    src="/me.webp"
+    alt="Foto de Martin Guette"
+    class="rounded-full size-64"
+  />
 </section>
