--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import AboutMe from '@/components/AboutMe.astro';
     <SectionContainer class="py-44 pb-32">
       <img
         class="rounded-full size-12 mb-4"
-        src="../../public/avatar.webp"
+        src="/avatar.webp"
         alt="Martin Guette photo"
       />
       <h1
