--- a/src/pages/components.astro
+++ b/src/pages/components.astro
@@ -1,7 +1,7 @@
 ---
 import Badge from '@/components/Badge.astro';
 import LinkedInIcon from '@/components/icons/LinkedIn.astro';
-import SocialPill from '@/components/icons/SocialPill.astro';
+import SocialPill from '@/components/SocialPill.astro';
 import SectionContainer from '@/components/SectionContainer.astro';
 import Layout from '@/layouts/Layout.astro';
 ---
