--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import GitHubIcon from '@/components/icons/GitHub.astro';
 import BriefcaseIcon from '@/components/icons/Briefcase.astro';
 import EmailIcon from '@/components/icons/Email.astro';
 import CodeIcon from '@/components/icons/Code.astro';
-import SocialPill from '@/components/icons/SocialPill.astro';
+import SocialPill from '@/components/SocialPill.astro';
 import SectionContainer from '@/components/SectionContainer.astro';
 import Experience from '@/components/Experience.astro';
 import Projects from '@/components/Projects.astro';
