--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,6 +4,10 @@ import GitHubIcon from './icons/GitHub.astro';
 import HTMLIcon from './icons/HTML.astro';
 import JavascriptIcon from './icons/JavaScript.astro';
 import WebIcon from './icons/Web.astro';
+import ReactIcon from './icons/React.astro';
+import PostgresSQLIcon from './icons/PostgreSQL.astro';
+import DjangoIcon from './icons/Django.astro';
+import MaterialUIIcon from './icons/MaterialUI.astro';
 import LinkButton from '@/components/LinkButton.astro';
 
 const TAGS = {
@@ -22,56 +26,90 @@ const TAGS = {
     class: 'bg-yellow-500/60 text-white',
     icon: JavascriptIcon,
   },
+  REACTJS: {
+    name: 'ReactJS',
+    class: 'bg-yellow-500/60 text-white',
+    icon: ReactIcon,
+  },
+  POSTGRESQL: {
+    name: 'PostgreSQL',
+    class: 'bg-blue-500/60 text-white',
+    icon: PostgresSQLIcon,
+  },
+  DJANGO: {
+    name: 'Django',
+    class: 'bg-green-500/60 text-white',
+    icon: DjangoIcon,
+  },
+  MATERIALUI: {
+    name: 'MaterialUI',
+    class: 'bg-blue-500/60 text-white',
+    icon: MaterialUIIcon,
+  },
 };
 
 const PROJECTS = [
   {
     title: 'Dr. Miguel Gómez - Ginecólogo Oncólogo sitio web',
     description:
-      'Dr. Miguel Gómez, ginecólogo-oncólogo con más de 20 años de experiencia en Santa Marta y Barranquilla. Especializado en tratamiento integral del cáncer ginecológico.',
+      'Dr. Miguel Gómez, ginecólogo-oncólogo con más de 20 años de experiencia en Santa Marta y Barranquilla. Especializado en tratamiento integral del cáncer ginecológico. Creado desde cero con HTML, CSS y JavaScript.',
     link: 'https://doctormiguelgomez.com/',
     github: 'https://github.com/martinchuck/doctor_miguel_gomez',
-    image: '/proyecto_dr_miguel_screenshot.webp',
+    image: '/public/projects/proyecto_dr_miguel_screenshot.webp',
     tags: [TAGS.HTML, TAGS.CSS, TAGS.JAVASCRIPT],
+  },
+  {
+    title:
+      'CreaB10 - Sistema de gestión de estructuras de cursos para la plataforma Bloque10.',
+    description:
+      'CreaB10 es un sistema de gestión de estructuras de creación de cursos para la plataforma Bloque10, que permite a los usuarios y administradores de la plataforma crear y gestionar cursos de forma sencilla y eficiente. Creado desde cero con ReactJS, MaterialUI, Django y PostgreSQL.',
+    github: '#',
+    link: '#',
+    image: '/public/projects/creab10_screenshot_1.webp',
+    tags: [TAGS.REACTJS, TAGS.MATERIALUI, TAGS.DJANGO, TAGS.POSTGRESQL],
   },
 ];
 ---
 
-{
-  PROJECTS.map(({ title, description, image, tags, link, github }) => (
-    <article>
-      <h3 class="text-2xl font-semibold text-yellow-800 dark:text-yellow-200 mb-2">
-        {title}
-      </h3>
-      <p class="text-lg mb-4 text-pretty">{description}</p>
-      <ul class="flex gap-x-2 flex-row mb-2">
-        {tags.map((tag) => (
-          <li>
-            <span
-              class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}
-            >
-              <tag.icon class="size-4" />
-              {tag.name}
-            </span>
-          </li>
-        ))}
-      </ul>
-      <img
-        loading="lazy"
-        class="rounded shadow-2xl shadow-white/10 aspect-video"
-        src={image}
-        alt={`Captura de pantalla del proyecto ${image}`}
-      />
-      <footer class="flex gap-x-4">
-        <LinkButton href={github}>
-          <GitHubIcon class="size-6" />
-          Ver código fuente
-        </LinkButton>
-        <LinkButton href={link}>
-          <WebIcon />
-          Ir al sitio web
-        </LinkButton>
-      </footer>
-    </article>
-  ))
-}
+<section class="flex flex-col gap-y-16">
+  {
+    PROJECTS.map(({ title, description, image, tags, link, github }) => (
+      <article>
+        <h3 class="text-2xl font-semibold text-yellow-800 dark:text-yellow-200 mb-2">
+          {title}
+        </h3>
+        <p class="text-lg mb-4 text-pretty">{description}</p>
+        <ul class="flex gap-x-2 flex-row mb-2">
+          {tags.map((tag) => (
+            <li>
+              <span
+                class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}
+              >
+                <tag.icon class="size-4" />
+                {tag.name}
+              </span>
+            </li>
+          ))}
+        </ul>
+        <img
+          loading="lazy"
+          class="rounded shadow-2xl shadow-white/10 aspect-video"
+          src={image}
+          alt={`Captura de pantalla del proyecto ${image}`}
+        />
+        <footer class="flex gap-x-4 items-end justify-start mt-4">
+          {github && (
+            <LinkButton href={github}>
+              <GitHubIcon class="size-6" />
+              Ver código fuente
+            </LinkButton>
+          )}
+          <LinkButton href={link}>
+            <WebIcon />
+            Ir al sitio web
+          </LinkButton>
+        </footer>
+      </article>
+    ))
+  }
+</section>
