--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import AboutMe from '@/components/AboutMe.astro';
       >
         Hey, soy Martin Guette <div class="flex justify-center items-center">
           <a
-            class="flex justify-center items-center"
+            class="flex justify-center items-center hover:scale-105 transition"
             href="https://www.linkedin.com/in/martin-guette/"
             target="_blank"
             rel="noopener noreferrer"
