responsive order img abotu me

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,6 +1,6 @@
-<section class="flex gap-x-8 justify-center items-center">
+<section class="flex flex-col md:flex-row gap-8 justify-center items-center">
   <div
-    class="[&>p]:mb-4 [&>p>strong]:text-yellow-300 [&>p>strong]:font-semibold text-pretty"
+    class="[&>p]:mb-4 [&>p>strong]:text-yellow-300 [&>p>strong]:font-semibold text-pretty order-2 md:order-1"
   >
     <p>
       ¡Soy Martin! Mi pasión por crear cosas nació en la secundaria, cuando
@@ -30,6 +30,6 @@
   <img
     src="/me.webp"
     alt="Foto de Martin Guette"
-    class="rounded-full size-64"
+    class="rounded-full size-64 order-1 md:order-2"
   />
 </section>
