--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,7 @@
+---
+const currentYear = new Date().getFullYear();
+---
+
 <footer
   class="rounded-lg shadow m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10"
 >
@@ -6,7 +10,8 @@
   >
     <span
       class="text-sm sm:text-center text-yellow-800/90 dark:text-yellow-200/90"
-      >© 2024 <a
+      >© {currentYear}
+      <a
         href="https://github.com/martinchuck"
         target="_blank"
         rel="noopener noreferrer"
