--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import AboutMe from '@/components/AboutMe.astro';
       <h1
         class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
       >
-        Hey, soy Martin Guette <div class="flex justify-center items-center">
+        Hey, Soy Martin Guette <div class="flex justify-center items-center">
           <a
             class="flex justify-center items-center hover:scale-105 transition"
             href="https://www.linkedin.com/in/martin-guette/"
@@ -44,13 +44,9 @@ import AboutMe from '@/components/AboutMe.astro';
         class="text-xl lg:text-2xl text-balance max-w-[700px] text-black dark:text-white"
       >
         <span>+1 año de experiencia.</span>
-        <span class="text-yellow-800 dark:text-yellow-200">
-          Desarrollador Web.
-        </span>
-        <span class="text-red-800 dark:text-red-200">
-          De Santa Marta, Colombia.</span
-        >
-        <span class="text-sky-800 dark:text-sky-200"
+        <span class="font-semibold"> Desarrollador Web. </span>
+        <span> De Santa Marta, Colombia.</span>
+        <span class="text-yellow-800 dark:text-yellow-200 font-semibold"
           >Especializado en crear aplicaciones únicas.</span
         >
       </h2>
