Update project images paths in Projects.astro

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -55,7 +55,7 @@ const PROJECTS = [
       'Dr. Miguel Gómez, ginecólogo-oncólogo con más de 20 años de experiencia en Santa Marta y Barranquilla. Especializado en tratamiento integral del cáncer ginecológico. Creado desde cero con HTML, CSS y JavaScript.',
     link: 'https://doctormiguelgomez.com/',
     github: 'https://github.com/martinchuck/doctor_miguel_gomez',
-    image: '../../public/projects/proyecto_dr_miguel_screenshot.webp',
+    image: '/projects/proyecto_dr_miguel_screenshot.webp',
     tags: [TAGS.HTML, TAGS.CSS, TAGS.JAVASCRIPT],
   },
   {
@@ -65,7 +65,7 @@ const PROJECTS = [
       'CreaB10 es un sistema de gestión de estructuras de creación de cursos para la plataforma Bloque10, que permite a los usuarios y administradores de la plataforma crear y gestionar cursos de forma sencilla y eficiente. Creado desde cero con ReactJS, MaterialUI, Django y PostgreSQL.',
     github: '#',
     link: '#',
-    image: '../../public/projects/creab10_screenshot_1.webp',
+    image: '/creab10_screenshot_1.webp',
     tags: [TAGS.REACTJS, TAGS.MATERIALUI, TAGS.DJANGO, TAGS.POSTGRESQL],
   },
 ];
