chore: Update project images paths in Projects.astro

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -55,7 +55,7 @@ const PROJECTS = [
       'Dr. Miguel Gómez, ginecólogo-oncólogo con más de 20 años de experiencia en Santa Marta y Barranquilla. Especializado en tratamiento integral del cáncer ginecológico. Creado desde cero con HTML, CSS y JavaScript.',
     link: 'https://doctormiguelgomez.com/',
     github: 'https://github.com/martinchuck/doctor_miguel_gomez',
-    image: '/projects/proyecto_dr_miguel_screenshot.webp',
+    image: '/dr_miguel_screenshot.webp',
     tags: [TAGS.HTML, TAGS.CSS, TAGS.JAVASCRIPT],
   },
   {
