--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -13,6 +13,7 @@ import WordpressIcon from './icons/Wordpress.astro';
 import ElementorIcon from './icons/Elementor.astro';
 import SupabaseIcon from './icons/Supabase.astro';
 import ShadcnIcon from './icons/Shadcn.astro';
+import TypeScriptIcon from './icons/TypeScript.astro';
 
 const TAGS = {
   HTML: {
@@ -69,6 +70,11 @@ const TAGS = {
     name: 'shadcn/ui',
     class: 'bg-white/5 text-white',
     icon: ShadcnIcon,
+  },
+  TYPESCRIPT: {
+    name: 'TypeScript',
+    class: 'bg-white/5 text-white',
+    icon: TypeScriptIcon,
   },
 };
 
