fix: Update greeting language and enhance description in index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import AboutMe from '@/components/AboutMe.astro';
       <h1
         class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
       >
-        Hey, Soy Martin Guette <div class="flex justify-center items-center">
+        Hola, Soy Martin Guette <div class="flex justify-center items-center">
           <a
             class="flex justify-center items-center hover:scale-105 transition"
             href="https://www.linkedin.com/in/martin-guette/"
@@ -47,8 +47,9 @@ import AboutMe from '@/components/AboutMe.astro';
         <span class="font-semibold"> Desarrollador Web. </span>
         <span> De Santa Marta, Colombia.</span>
         <span class="text-yellow-800 dark:text-yellow-200 font-semibold"
-          >Especializado en crear aplicaciones únicas.</span
-        >
+          >Especializado en convertir ideas en aplicaciones únicas y funcionales
+        </span>
+        <span> centradas en la experiencia del usuario.</span>
       </h2>
       <nav class="flex
           gap-4
