--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import AboutMe from '@/components/AboutMe.astro';
       <img
         class="rounded-full size-12 mb-4"
         src="/avatar.webp"
-        alt="Martin Guette photo"
+        alt="Martin Guette"
       />
       <h1
         class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
