refactor: Simplify Shadcn icon SVG structure and update stroke properties

--- a/src/components/icons/Shadcn.astro
+++ b/src/components/icons/Shadcn.astro
@@ -1,15 +1,8 @@
-<svg
-  {...Astro.props}
-  xmlns="http://www.w3.org/2000/svg"
-  viewBox="0 0 24 24"
-  fill="none"
-  stroke="currentColor"
-  stroke-width="2"
-  stroke-linecap="round"
-  stroke-linejoin="round"
-  class="size-4"
+<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+  ><path fill="none" d="M0 0h256v256H0z"></path><path
+    fill="none"
+    stroke="#fff"
+    stroke-width="25"
+    stroke-linecap="round"
+    d="M208 128l-80 80M192 40L40 192"></path></svg
 >
-  <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
-  <path d="M2 17l10 5 10-5"></path>
-  <path d="M2 12l10 5 10-5"></path>
-</svg>
