--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -153,7 +153,7 @@ const PROJECTS = [
 
 <section class="flex flex-col gap-y-16">
   {
-    PROJECTS.map(({ title, description, image, tags, link, github }) => (
+    PROJECTS.map(({ title, description, image, tags, link }) => (
       <article>
         <h3 class="text-2xl font-semibold text-yellow-800 dark:text-yellow-200 mb-2">
           {title}
